--- a/nvme_ubuntu_2204.adoc
+++ b/nvme_ubuntu_2204.adoc
@@ -445,7 +445,7 @@ NSID       UUID                                   Size
 
 The NVMe-oF host configuration for Ubuntu 22.04 with ONTAP release has the following known issue:
 
-[options="header", cols="20, 20, 50, 20]
+[cols=4*,options="header",cols="15,20,50,15"]
 |===
 |NetApp Bug ID	|Title	|Description	|Bugzilla ID
 |CONTAPEXT-1231
